--- a/app/templates/contacts.twig
+++ b/app/templates/contacts.twig
@@ -207,10 +207,12 @@
 <!-- begin career-section -->
 <section class="career-section">
 	<div class="uk-container">
-		<h2 class="title-h2 uk-text-center" uk-scrollspy="cls: slide-up;">Хотите у нас работать?</h2>
+		<h2 class="title-h2 uk-text-center" uk-scrollspy="cls: slide-up;">Присоединяйтесь к команде Лето!</h2>
 		<img class="uk-display-block uk-margin-auto uk-margin-medium-bottom" src="img/media/hh.png" alt="HeadHunter" uk-scrollspy="cls: slide-up; delay: 300">
-		<div class="slogan uk-text-center">Страница компании и все вакансии на портале HeadHunter.ru</div>
-		<a href="" class="btn uk-margin-auto"><span>Перейти</span></a>
+		<div class="slogan uk-text-center">
+			Мы ищем единомышленников, которые в хотят развиваться. <br> Для нас важно открывать новые таланты в своих сотрудниках и развивать <br> их вместе с ними. <br>
+			Вы можете откликнуться на актуальные вакансии на сайте <a href="https://hh.ru" class="green-link" target="_blank">HeadHunter.ru</a>, кликнув на кнопку ниже.</div>
+		<a href="https://hh.ru/employer/425607" class="btn uk-margin-auto" target="_blank"><span>Перейти</span></a>
 	</div>
 </section><!-- end career-section -->
 
