--- a/app/templates/includes/components/typebox-section.twig
+++ b/app/templates/includes/components/typebox-section.twig
@@ -148,7 +148,7 @@
 					</div>
 					<div class="item__text">
 						<div class="title-h3">Junior Blue</div>
-						<div class="item__subtitle">15 C2 (45-54,9 грамм)</div>
+						<div class="item__subtitle">15 яиц C2 (45-54,9 грамм)</div>
 					</div>
 				</li>
 
