--- a/app/sass/header/header-desk.scss
+++ b/app/sass/header/header-desk.scss
@@ -9,6 +9,9 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+		@media (min-width: $tablet-w) {
+			padding: 0;
+		};
 	}
 }
 
@@ -46,19 +49,30 @@
 	li {
 		display: inline-block;
 		vertical-align: top;
-		@media (min-width: $tablet-w) {
-			margin-left: 20px;
-		};
-		@media (min-width: $desk-w) {
-			margin-left: 30px;
-		};
-		&:first-child {
-			margin-left: 0;
+		&.active {
+			a {
+				background-color: $yellow;
+				color: $white;
+			}
 		}
 		a {
 			font-size: 14px;
 			line-height: 21px;
 			color: $tColor;
+			display: block;
+			height: 50px;
+			line-height: 50px;
+			transition: background-color .3s, color .3s ease;
+			@media (min-width: $mob-xs) {
+				padding: 0 10px;
+			}
+			@media (min-width: $desk-w) {
+				padding: 0 15px;
+			};
+			&:hover {
+				background-color: $yellow;
+				color: $white;
+			}
 		}
 	}
 }
