--- a/app/templates/includes/components/composition-slider.twig
+++ b/app/templates/includes/components/composition-slider.twig
@@ -8,11 +8,10 @@
 					<p>
 						Ниже представлены таблицы химического состава и диаграммы, из которых Вы можете узнать какая пищевая ценность, какие витамины, минералы, и сколько калорий содержится в данном продукте питания. Со временем Вам достаточно будет одного взгляда на графики, чтобы понять питательную ценность пищи.В таблицах приводятся данные %РСП.
 					</p>
-					<a href="" class="green-link">Подробнее</a>
 				</div>
 			</div>
 			<div class="slide">
-				<img src="img/media/sliders/composition-slide.svg" alt="Состав яйца">
+				<img src="img/media/sliders/composition-slide.png" alt="Состав яйца">
 			</div>
 		</div>
 		<div class="slider__arrows">
