--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1940,6 +1940,14 @@ nav.nav {
   border-bottom: 1px solid #ece6e1;
 }
 
+.uk-offcanvas .uk-nav li.active {
+  background: #ffb422;
+}
+
+.uk-offcanvas .uk-nav li.active a {
+  color: #ffffff;
+}
+
 .uk-offcanvas .uk-nav li a {
   color: #5b6356;
 }
@@ -3241,10 +3249,31 @@ nav.nav {
   padding-top: 40px;
 }
 
+.map {
+  margin: 0 auto;
+  width: 100%;
+  height: 400px;
+  max-width: 960px;
+}
+
 .address {
-  background-size: contain;
-  background-position: center center;
-  background-repeat: no-repeat;
+  position: relative;
+  background: #faf4ef;
+  /* 	background-size: contain;
+background-position: center center;
+background-repeat: no-repeat;
+@media (min-width: $mob-xs) {
+	background-position: center 100%;
+}
+@media (min-width: $tablet-w) {
+	background-position: center center;
+}; */
+}
+
+.address .map {
+  margin-top: 40px;
+  top: 180px;
+  left: 50%;
 }
 
 .address-tabs .uk-switcher {
@@ -3253,11 +3282,19 @@ nav.nav {
 }
 
 .address-tabs .uk-switcher li {
-  height: 500px;
   overflow: hidden;
   background-repeat: no-repeat;
   background-position: center 0;
   background-size: contain;
+  /* 			@media (min-width: $mob-xs) {
+	height: 200px;
+};
+@media (min-width: $mob-s) {
+	height: 300px;
+};
+@media (min-width: $tablet-w) {
+	height: 500px;
+}; */
 }
 
 .address-tabs .uk-switcher li:after {
@@ -3282,6 +3319,7 @@ nav.nav {
 }
 
 .address-tabs .uk-switcher li img {
+  display: none;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -3580,6 +3618,11 @@ main.main-container {
 
 .steps-work-section__inner.uk-scrollspy-inview li:before {
   opacity: 1;
+}
+
+.page-not-found .title-h1 {
+  z-index: 500;
+  color: #ffffff;
 }
 
 /*______ END MAIN CONTENT ______*/
@@ -4271,15 +4314,21 @@ main.main-container {
   }
 
   .steps-list:before {
-    /* 			content: '';
-position: absolute;
-top: 0;
-left: 50%;
-display: block;
-width: 2px;
-height: calc(100% - 100px);
-background:  $bgColorUI;
-transform: translateX(-10px); */
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 50%;
+    display: block;
+    width: 20px;
+    height: -webkit-calc(100% - 100px);
+    height: -moz-calc(100% - 100px);
+    height: calc(100% - 100px);
+    background: url("../img/ui/vertical-line-2.svg") center 0 repeat-y;
+    -webkit-transform: translateX(-10px);
+    -moz-transform: translateX(-10px);
+    -ms-transform: translateX(-10px);
+    transform: translateX(-10px);
+    background-size: 20px;
   }
 
   .steps-list li {
@@ -4458,12 +4507,8 @@ transform: translateX(-10px); */
     font-size: 14px;
   }
 
-  .address {
-    background-position: center 100%;
-  }
-
-  .address-tabs .uk-switcher li {
-    height: 200px;
+  .address .map {
+    top: 240px;
   }
 
   .timer-tabs li {
@@ -4564,6 +4609,13 @@ transform: translateX(-10px); */
     margin-bottom: 60px;
   }
 
+  .page-not-found .title-h1 {
+    font-size: 75px;
+    line-height: 75px;
+    position: relative;
+    color: #5b6356;
+  }
+
   .footer__column-wrapper {
     margin-bottom: 15px !important;
   }
@@ -4613,6 +4665,10 @@ transform: translateX(-10px); */
     -webkit-justify-content: space-around;
     -ms-flex-pack: distribute;
     justify-content: space-around;
+  }
+
+  .steps-list:before {
+    display: none;
   }
 
   .steps-list li {
@@ -4738,8 +4794,8 @@ transform: translateX(-10px); */
     height: 50px;
   }
 
-  .address-tabs .uk-switcher li {
-    height: 300px;
+  .address .map {
+    top: 180px;
   }
 
   .timer-app__countdown {
@@ -4750,6 +4806,23 @@ transform: translateX(-10px); */
   .btns-list li a {
     font-size: 12px;
     height: 50px;
+  }
+
+  .page-not-found {
+    margin-top: 80px;
+  }
+
+  .page-not-found .title-h1 {
+    position: absolute;
+    font-size: 100px;
+    line-height: 100px;
+    top: -40px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    color: #ffffff;
   }
 
   .footer__column-wrapper {
@@ -4996,14 +5069,6 @@ transform: translateX(-10px); */
     height: 60px;
   }
 
-  .address {
-    background-position: center center;
-  }
-
-  .address-tabs .uk-switcher li {
-    height: 500px;
-  }
-
   .timer-app__label {
     margin-bottom: 36px;
   }
@@ -5071,6 +5136,16 @@ transform: translateX(-10px); */
 
   .steps-work-section {
     margin-bottom: 90px;
+  }
+
+  .page-not-found {
+    margin-top: 100px;
+  }
+
+  .page-not-found .title-h1 {
+    position: absolute;
+    font-size: 130px;
+    line-height: 130px;
   }
 
   .footer__top {
@@ -5800,6 +5875,13 @@ transform: translateX(-10px); */
 
   .steps-work-section {
     margin-bottom: 180px;
+  }
+
+  .page-not-found .title-h1 {
+    font-size: 130px;
+    line-height: 130px;
+    top: -40px;
+    left: 50%;
   }
 
   .brands-slider {
