--- a/app/templates/contacts.twig
+++ b/app/templates/contacts.twig
@@ -230,19 +230,18 @@
 			</ul>
 
 			<ul class="uk-switcher">
-				<li data-img="img/media/moscow-pin.png">
+				<li class="js__go-to" data-goto="[55.78574522960528,37.24092823483275]">
 					<div class="slogan uk-text-center">Московская обл., БЦ Рига Ленд, корпус 6, подъезд 5, офис № 207</div>
-					<!-- <img src="img/media/test1.jpg" alt=""> -->
+					
 				</li>
-				<li data-img="img/media/belgorod-pin.png">
+				<li class="js__go-to" data-goto="Белгородская обл., Шебекинский р-н, с. Белянка, ул. Комсомольская, д.57">
 					<div class="slogan uk-text-center">Белгородская обл., Шебекинский р-н, с. Белянка, ул. Комсомольская, д.57</div>
-					<!-- <img src="img/media/test2.jpg" alt=""> -->
 				</li>
-				<li data-img="img/media/tula2.png">
+				<li class="js__go-to" data-goto="Тульская область, Заокский р-н, пос. Сосновый">
 					<div class="slogan uk-text-center">Тульская область, Заокский р-н, пос. Сосновый</div>
-					<!-- <img src="img/media/test3.jpg" alt=""> -->
 				</li>
 			</ul>
+			<div id="map" class="map"></div>
 		</div><!-- end custom-tabs -->
 	</div>
 </div><!-- end address -->
