--- a/app/templates/includes/head.twig
+++ b/app/templates/includes/head.twig
@@ -9,6 +9,9 @@
 	<meta property="og:image" content="">
 	<meta property="og:title" content="">
 	<meta property="og:description" content="">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 	<link rel="stylesheet" href="libs/uikit-3/css/uikit.min.css">
 	<link rel="stylesheet" href="libs/slick/slick.css">
