--- a/app/templates/company.twig
+++ b/app/templates/company.twig
@@ -291,7 +291,7 @@
 				<img class="ellipse-abs-1 uk-visible@l" data-src="img/icon-svg/large-ellipse-1.svg" alt="" uk-img>
 				<img class="ellipse-abs-2 uk-visible@l" data-src="img/icon-svg/large-ellipse-2.svg" alt="" uk-img>
 				<!-- begin custom-tabs -->
-				<div class="custom-tabs">
+				<div class="custom-tabs all-brands">
 
 					<ul class="tab-sw" uk-switcher="swiping: false">
 						<li><a href="">Цфо</a></li>
@@ -300,76 +300,10 @@
 
 					<ul class="uk-switcher">
 						<li>
-							<div class="tab-slider">
-								<div class="slider">
-									{% for item in 0..2 %}
-									<div class="slide">
-										<div class="brands-grid">
-											<div class="row">
-												<img data-src="img/media/brands/okey.jpg" alt="" uk-img>
-												<img data-src="img/media/brands/karusel.webp" alt="" uk-img>
-											</div>
-											<div class="row">
-												<img data-src="img/media/brands/perekrestok.png" alt="" uk-img>
-												<img data-src="img/media/brands/utkonos.png" alt="" uk-img>
-												<img data-src="img/media/brands/magnit.png" alt="" uk-img>
-											</div>
-											<div class="row">
-												<img data-src="img/media/brands/pyaterochka.png" alt="" uk-img>
-												<img data-src="img/media/brands/azbuka.png" alt="" uk-img>
-												<img data-src="img/media/brands/avoska.png" alt="" uk-img>
-												<img data-src="img/media/brands/linia.jpg" alt="" uk-img>
-												<img data-src="img/media/brands/billa.png" alt="" uk-img>
-											</div>
-											<div class="row">
-												<img data-src="img/media/brands/diksi.png" alt="" uk-img>
-												<img data-src="img/media/brands/five-five.jpg" alt="" uk-img>
-												<img data-src="img/media/brands/tvoi-dom.jpg" alt="" uk-img>
-												<img data-src="img/media/brands/vern.png" alt="" uk-img>
-												<img data-src="img/media/brands/da.jpg" alt="" uk-img>
-												<img data-src="img/media/brands/yabloko.png" alt="" uk-img>
-											</div>
-										</div>
-									</div>
-									{% endfor %}
-								</div>
-							</div>
+							<img data-src="img/media/brands/brands-cfo.png" alt="" uk-img>
 						</li>
 						<li>
-							<div class="tab-slider">
-								<div class="slider">
-									{% for item in 0..2 %}
-									<div class="slide">
-										<div class="brands-grid">
-											<div class="row">
-												<img data-src="img/media/brands/okey.jpg" alt="" uk-img>
-												<img data-src="img/media/brands/karusel.png" alt="" uk-img>
-											</div>
-											<div class="row">
-												<img data-src="img/media/brands/perekrestok.png" alt="" uk-img>
-												<img data-src="img/media/brands/utkonos.png" alt="" uk-img>
-												<img data-src="img/media/brands/magnit.png" alt="" uk-img>
-											</div>
-											<div class="row">
-												<img data-src="img/media/brands/pyaterochka.png" alt="" uk-img>
-												<img data-src="img/media/brands/azbuka.png" alt="" uk-img>
-												<img data-src="img/media/brands/avoska.png" alt="" uk-img>
-												<img data-src="img/media/brands/linia.jpg" alt="" uk-img>
-												<img data-src="img/media/brands/billa.png" alt="" uk-img>
-											</div>
-											<div class="row">
-												<img data-src="img/media/brands/diksi.png" alt="" uk-img>
-												<img data-src="img/media/brands/five-five.jpg" alt="" uk-img>
-												<img data-src="img/media/brands/tvoi-dom.jpg" alt="" uk-img>
-												<img data-src="img/media/brands/vern.png" alt="" uk-img>
-												<img data-src="img/media/brands/da.jpg" alt="" uk-img>
-												<img data-src="img/media/brands/yabloko.png" alt="" uk-img>
-											</div>
-										</div>
-									</div>
-									{% endfor %}
-								</div>
-							</div>
+							<img data-src="img/media/brands/brands-ufo.png" alt="" uk-img>
 						</li>
 					</ul>
 
