--- a/app/sass/content/tabs.scss
+++ b/app/sass/content/tabs.scss
@@ -92,7 +92,21 @@
 .custom-tabs{
 	position: relative;
 	z-index: 20;
-	/* min-height: 800px; */
+	&.all-brands {
+		.uk-switcher {
+			padding-top: 40px;
+			li {
+				@media (min-width: $tablet-w) {
+					min-height: 550px;
+				};
+				&.uk-active {
+					display: flex;
+					align-items: center;
+					justify-content: center;
+				}
+			}
+		}
+	}
 }
 
 .contacts-tabs {
@@ -110,26 +124,26 @@
 	width: 100%;
 	height: 400px;
 	max-width: 960px;
+	border-radius: 36px;
+	overflow: hidden;
+}
+
+.ymaps-2-1-76-balloon {
+	border-radius: 36px;
+}
+
+.ymaps-2-1-76-balloon__layout {
+	padding: 5px;
+	border-radius: 36px;
 }
 
 .address {
 	position: relative;
 	background: $bgColor;
-/* 	background-size: contain;
-background-position: center center;
-background-repeat: no-repeat;
-@media (min-width: $mob-xs) {
-	background-position: center 100%;
-}
-@media (min-width: $tablet-w) {
-	background-position: center center;
-}; */
 	.map {
 		margin-top: 40px;
-		//position: absolute;
 		top: 180px;
 		left: 50%;
-		//transform: translateX(-50%);
 		@media (min-width: $mob-xs) {
 			top: 240px;
 		}
@@ -144,34 +158,9 @@ background-repeat: no-repeat;
 		position: relative;
 		padding-top: 50px;
 		li {
-			
-			//height: 500px;
 			overflow: hidden;
 			background-repeat: no-repeat;
 			background-position: center 0;
-			background-size: contain;
-/* 			@media (min-width: $mob-xs) {
-	height: 200px;
-};
-@media (min-width: $mob-s) {
-	height: 300px;
-};
-@media (min-width: $tablet-w) {
-	height: 500px;
-}; */
-			&:after {
-				//content: '';
-				position: absolute;
-				display: block;
-				width: 64px;
-				height: 70px;
-				top: 50%;
-				left: 50%;
-				transform: translate(-50%, -50%);
-				background: url('../img/ui/pin.svg') center no-repeat;
-				background-size: 100%;
-				z-index: 250;
-			}
 			div {
 				position: relative;
 				z-index: 120;
