правка слайдера с брендами

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3676,6 +3676,10 @@ main.main-container {
   position: relative;
 }
 
+.brands-slider .slick-track {
+  margin: 0 auto;
+}
+
 .brands-slider .slider > button {
   display: none !important;
 }
