--- a/app/sass/sliders/sliders.scss
+++ b/app/sass/sliders/sliders.scss
@@ -24,6 +24,9 @@
 	.uk-container {
 		position: relative;
 	}
+	.slick-track {
+		margin: 0 auto;
+	}
 	.slider {
 		&>button {
 			display: none !important;
